# Communication

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  LLM.md  README.md  vcpkg.json
benchmark/: BenchmarkMetrics.h  BenchmarkRunner.cpp  BenchmarkRunner.h  CMakeLists.txt  main.cpp
cli/: CMakeLists.txt  main_cli.cpp
cmake/: CompilerFlags.cmake
docs/: c4_architecture.md  c4_protocol_gateway.md  c4_telemetry_logger.md  c4_tracking_hub.md  circular_byte_ring.md  disruptor_bus.md  features.md  lock_free_memory_pool.md  lock_free_ring_buffer.md  thread_safe_queue.md
gui/: CMakeLists.txt  CommunicationBridge.cpp  CommunicationBridge.h  Main.qml  main_gui.cpp
lib/: CMakeLists.txt  CircularByteRing.h  DisruptorBus.h  ICommunication.h  LockFreeMemoryPool.h  LockFreeRingBuffer.h  SerialPort.cpp  SerialPort.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  ThreadSafeQueue.h  Types.h  UdpSocket.cpp  UdpSocket.h
lib/Platform/: SocketUtils.cpp  SocketUtils.h
protocol_gateway/: CMakeLists.txt  DuplexBridge.cpp  DuplexBridge.h  GatewayFrame.h  main.cpp
scripts/: pre-commit
telemetry_logger/: BinaryWriter.cpp  BinaryWriter.h  CMakeLists.txt  CsvWriter.cpp  CsvWriter.h  ITelemetryWriter.h  SqliteWriter.cpp  SqliteWriter.h  TelemetryIngestor.cpp  TelemetryIngestor.h  TelemetryTypes.h  main.cpp
tests/: CMakeLists.txt  CircularByteRingTest.cpp  DisruptorBusTest.cpp  LockFreeMemoryPoolTest.cpp  unit_tests.cpp
tracking_hub/: AisStreamProvider.cpp  AisStreamProvider.h  CMakeLists.txt  HttpClient.cpp  HttpClient.h  ITrackingProvider.h  OpenSkyProvider.cpp  OpenSkyProvider.h  Parsers.cpp  Parsers.h  ProviderRegistry.cpp  ProviderRegistry.h  SimulatorProvider.cpp  SimulatorProvider.h  TargetTypes.h  TrackingDatabase.cpp  TrackingDatabase.h  TrackingEngine.cpp  TrackingEngine.h  main.cpp
